Fix Netlify primary domain assets

--- a/netlify.toml
+++ b/netlify.toml
@@ -15,3 +15,12 @@ HUGO_VERSION = "0.69.2"
 
 [context.branch-deploy]
 command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
+
+[[headers]]
+  for = "/css/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
+[[headers]]
+  for = "/js/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
