--- a/config.toml
+++ b/config.toml
@@ -56,7 +56,7 @@ enableEmoji = true
   code_copy_button = true # Turn on/off the code-copy-button for code-fields
   
   # Add custom css
-  # customCSS = ["css/foo.css", "css/bar.css"]
+  customCSS = ["css/typography.css"]
 
   # Social Icons
   # Check https://github.com/Track3/hermit#social-icons for more info.
