Add current job

--- a/config.toml
+++ b/config.toml
@@ -43,7 +43,7 @@ enableEmoji = true
   # images = [""]
   themeColor = "#494f5c"
 
-  homeSubtitle = "Software developer, geek and technology enthusiast"
+  # homeSubtitle = 'Software developer, geek and technology enthusiast'
   footerCopyright = ' &#183; <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
   # bgImg = ""  # Homepage background-image URL
 
