Add new basic theme

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,81 +1,45 @@
 baseURL = "https://hauru.eu/"
-title = "Tomek Paczkowski"
+theme = "hauru"
 
-theme = "hermit"
+title = "Tomek Paczkowski"
+description = "Tomek Paczkowski - Principal Software Engineer"
+# This message is only used by the RSS template
+copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License."
 
 languageCode = "en-gb"
 defaultContentLanguage = "en"
+enableEmoji = true            # https://gohugo.io/functions/emojify/
 
-# enableGitInfo = true
-
-pygmentsCodefences  = true
-pygmentsUseClasses  = true
-
-rssLimit = 10
-
-# This message is only used by the RSS template.
-copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License."
-
-# Shorthand emojis in content files - https://gohugo.io/functions/emojify/
-enableEmoji = true  
-
-
-[author]
-  name = "Tomek Paczkowski"
-
-[blackfriday]
-  # hrefTargetBlank = true
-  # noreferrerLinks = true
-  # nofollowLinks = true
+paginate = 25
 
 [taxonomies]
-  tag = "tags"
-  # Categories are disabled by default.
+tag = "tags"
 
 [params]
-  dateform        = "Jan 2, 2006"
-  dateformShort   = "Jan 2"
-  dateformNum     = "2006-01-02"
-  dateformNumTime = "2006-01-02 15:04 -0700"
+dateform = "Jan 2, 2006"
+dateformShort = "Jan 2"
+dateformNum = "2006-01-02"
+dateformNumTime = "2006-01-02 15:04 -0700"
 
-  # Metadata mostly used in document's head
-  description = "Tomek Paczkowski - Software developer, geek and technology enthusiast. Find me on Twitter and GitHub."
-  # images = [""]
-  themeColor = "#494f5c"
+# This is used in the page footer
+footerCopyright = ' &#183; <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
 
-  # homeSubtitle = 'Software developer, geek and technology enthusiast'
-  footerCopyright = ' &#183; <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
-  # bgImg = ""  # Homepage background-image URL
+[params.author]
+name = "Tomek Paczkowski"
 
-  
-  # Toggling this option needs to rebuild SCSS, requires Hugo extended version
-  justifyContent = false  # Set "text-align: justify" to `.content`.
+[[params.social]]
+name = "github"
+url = "https://github.com/oinopion"
 
-  relatedPosts = false  # Add a related content section to all single posts page
+[[params.social]]
+name = "email"
+url = "mailto:tomek@hauru.eu"
 
-  code_copy_button = true # Turn on/off the code-copy-button for code-fields
-  
-  # Add custom css
-  # customCSS = ["css/typography.css"]
+[[params.social]]
+name = "linkedin"
+url = "https://www.linkedin.com/in/tomekpaczkowski/"
 
-  # Social Icons
-  # Check https://github.com/Track3/hermit#social-icons for more info.
-  [[params.social]]
-    name = "twitter"
-    url = "https://twitter.com/oinopion"
 
-  [[params.social]]
-    name = "github"
-    url = "https://github.com/oinopion"
-
-  [[params.social]]
-    name = "email"
-    url = "mailto:tomek@hauru.eu"
-  
-  [[params.social]]
-    name = "instagram"
-    url = "https://instagram.com/oinopion"
-  
 [menu]
 
 #   [[menu.main]]
