--- a/hugo.toml
+++ b/hugo.toml
@@ -12,6 +12,8 @@ enableEmoji = true            # https://gohugo.io/functions/emojify/
 
 paginate = 25
 
+disableKinds = [ "taxonomy", "sitemap", "RSS" ]
+
 [taxonomies]
 tag = "tags"
 
