--- a/netlify.toml
+++ b/netlify.toml
@@ -19,15 +19,15 @@ command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
 [[headers]]
 for = "/js/*.min.*.js"
 [headers.values]
-Cache-Control = "public, max-age=604800, immutable"
+Cache-Control = "public, max-age=31536000, immutable"
 Access-Control-Allow-Origin = "*"
 [[headers]]
 for = "/css/*.min.*.css"
 [headers.values]
-Cache-Control = "public, max-age=604800, immutable"
+Cache-Control = "public, max-age=31536000, immutable"
 Access-Control-Allow-Origin = "*"
 [[headers]]
-for = "/fonts/*.woff2"
+for = "/fonts/*.{woff2,woff,ttf}"
 [headers.values]
-Cache-Control = "public, max-age=604800, immutable"
+Cache-Control = "public, max-age=31536000, immutable"
 Access-Control-Allow-Origin = "*"
