--- a/netlify.toml
+++ b/netlify.toml
@@ -27,7 +27,7 @@ for = "/css/*.min.*.css"
 Cache-Control = "public, max-age=31536000, immutable"
 Access-Control-Allow-Origin = "*"
 [[headers]]
-for = "/fonts/*.{woff2,woff,ttf}"
+for = "/fonts/*.woff2"
 [headers.values]
 Cache-Control = "public, max-age=31536000, immutable"
 Access-Control-Allow-Origin = "*"
